Lecturas del 23 de octubre de 2025

--- a/README.org
+++ b/README.org
@@ -79,6 +79,15 @@ its content.
 
 ** Octubre 2025
 
+*** 22-Oct-25
++ [[https://xenaproject.wordpress.com/2025/10/22/formal-or-not-formal-that-is-the-question-in-ai-for-theorem-proving/][Formal or not formal? That is the question in AI for theorem proving]]. ~ Kevin Buzzard. #AI #Math #LLM #ITP #LeanProver
++ [[https://florisvandoorn.com/theses/FelixPernegger.pdf][Formalisation of the Calderón transference principle in ergodic theory]]. ~ Felix Pernegger. #ITP #LeanProver #Math
++ [[https://futurism.com/artificial-intelligence/openai-researcher-deletes-tweet][OpenAI researcher forced to delete “embarrassing” tweet claiming huge breakthrough]]. ~ Frank Landymore. #AI #Math
++ [[https://the-decoder.com/leading-openai-researcher-announced-a-gpt-5-math-breakthrough-that-never-happened/][Leading OpenAI researcher announced a GPT-5 math breakthrough that never happened]]. ~ Matthias Bastian. #AI #Math
++ [[https://youtu.be/qcTfXvkBUPA][PhysLean: A talk for physics undergraduates]]. ~ Joseph Tooby-Smith. #ITP #LeanProver #Math #Physics
++ [[https://borisalexeev.com/pdf/erdos707.pdf][Forbidden Sidon subsets of perfect difference sets, featuring a human-assisted proof]]. ~ Boris Alexeev, ChatGPT, Lean, Dustin G. Mixon. #AI #Math #LLM #ChatGPT #ITP #LeanProver
++ [[https://jaalonso.github.io/vestigium/posts/2025/10/22-una-refutacion-inusual-del-problema-de-erdos-707-colaboracion-humano-ia-y-el-papel-de-lean/][Una refutación inusual del problema de Erdős #707: Colaboración humano-IA y el papel de Lean]]. #AI #Math #LLM #ITP #LeanProver
+
 *** 21-Oct-25
 + [[https://arxiv.org/abs/2510.14558v1][HITrees: Higher-order interaction trees]]. ~ Amir Mohammad Fadaei Ayyam, Michael Sammler. #ITP #LeanProver
 + [[https://arxiv.org/abs/2510.14480v1][Certifying optimal MEV strategies with Lean]]. ~ Massimo Bartoletti, Riccardo Marchesin, Roberto Zunino. #ITP #LeanProver
