--- a/README.org
+++ b/README.org
@@ -11,6 +11,7 @@ its content.
 
 * Content                                                                      :TOC:
 - [[#lecturas-del-año-2025][Lecturas del año 2025]]
+  - [[#noviembre-2025][Noviembre 2025]]
   - [[#octubre-2025][Octubre 2025]]
   - [[#septiembre-2025][Septiembre 2025]]
   - [[#agosto-2025][Agosto 2025]]
@@ -76,6 +77,13 @@ its content.
 - [[#lecturas-anteriores][Lecturas anteriores]]
 
 * Lecturas del año 2025
+
+** Noviembre 2025
+
+*** 01-Nov-25
++ [[https://youtu.be/U-xG56YHCiE][An introduction to formal real analysis (Lecture 15: The real numbers)]]. ~ Alex Kontorovich. #ITP #LeanProver #Math
++ [[https://wasabi315.github.io/files/wctp2025a.pdf][Formalization of coverage checking in Agda]]. ~ Satoshi Takimoto, Sosuke Moriguchi, Takuo Watanabe. #ITP #Agda #FunctionalProgramming
++ [[https://pure.hw.ac.uk/ws/portalfiles/portal/161639384/S0956796825100038a.pdf][Call-by-value and call-by-name: A simple proof of a classic theorem]]. ~ D. Biernacki, J. McKinna, & F. Sieczkowski. #ITP #Adga #FunctionalProgramming
 
 ** Octubre 2025
 
